--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     shadow-intensity="1"                          
     camera-controls                         
     src="./cube_small.glb"     
+    src="./cube_medium.glb"     
     ios-src="./.usdz"         
     alt="A 3D model of an armchair."        
     style="width:800px;height:1000px;"
