--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
     shadow-intensity="1"                          
     camera-controls                         
          
-    src="./cube_medium.glb"     
-    ios-src="./.usdz"         
+    src="./cube_medium.glb" 
+    src="./cube_small.glb"    
+          
     alt="A 3D model of an armchair."        
     style="width:800px;height:1000px;"
     >  
