--- a/index.html
+++ b/index.html
@@ -152,10 +152,7 @@
     max-camera-orbit="auto 100deg auto"     
     shadow-intensity="1"                          
     camera-controls                         
-         
-    src="./cube_medium.glb" 
-    src="./cube_small.glb"    
-          
+    src="./cube_2ko.glb"
     alt="A 3D model of an armchair."        
     style="width:800px;height:1000px;"
     >  
