--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <model-viewer 
     id="dimension-demo"                 
     ar 
-    ar-modes="webxr"               
+    ar-modes="webxr scene-viewer"               
     ar-scale="fixed"                      
     camera-orbit="-30deg auto auto"         
     max-camera-orbit="auto 100deg auto"     
@@ -159,7 +159,7 @@
     <!--  
     id:
     ar:サポートされているデバイスでARエクスペリエンスを起動する機能を有効する。
-    ar-modes:有効にするARエクスペリエンスのタイプの優先リスト。("webxr":Android,iOSの両方、"scene-viewer":Android、"quick-look":iOS)
+    ar-modes:有効にするARエクスペリエンスのタイプの優先リスト。("webxr":Android,iOSの両方、"webxr scene-viewer":Android、"webxr quick-look":iOS)
     ar-scale:AR関連
     camera-orbit:カメラ関連
     max-camera-orbit:カメラ関連
