--- a/index.html
+++ b/index.html
@@ -183,6 +183,22 @@
     -->
 
 
+
+    <!-- AR起動ボタンをカスタム -->
+    <button
+    slot="ar-button" 
+    style="background-color: white; 
+    border-radius: 4px;
+    border: none; 
+    position: absolute; 
+    top: 20px; 
+    right: 20px; "
+    >
+    カメラ起動ボタン
+    </button>
+
+
+    
       <!--  -->
       <!--  -->
       <!-- button:クリックできるボタンを表す -->
