--- a/index.html
+++ b/index.html
@@ -194,16 +194,16 @@
     </button>
     <style>     
       #custom-ar-button
-      {
+      { 
+        font-family: Futura, Helvetica Neue, sans-serif;    /* フォント指定 */
         font-size: 24px;      /* フォントの大きさ */
+        font-weight: 700;     /* フォントの太さ */
         position: absolute;   /* custom-ar-buttonというidがついたボックスに下記(div id="custom-ar-button")の配置位置を反映 */
         bottom: 16px;         /* 下からの配置位置(距離)を指定(表示領域の最下端から) */
         right: 16px;          /* 右からの配置位置(距離)を指定(表示領域の再右端から) */
-
-        border-radius: 4px;   /* border-radius:ボックスの4つのコーナーの角丸をまとめて指定 */
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);  /* box-shadow:ボックスのフレーム周辺に影を作る */  
-        
-        /* background-color: white;  */
+        border-radius: 10px;   /* border-radius:ボックスの4つのコーナーの角丸をまとめて指定 */
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);  /* box-shadow:ボックスのフレーム周辺に影を作る */         
+        background-color: white;  /* background:ボックスの背景色指定 */
       }
     </style>
     
