--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
         font-weight: 400;     /* フォントの太さ */
         position: absolute;   /* custom-ar-buttonというidがついたボックスに下記(div id="custom-ar-button")の配置位置を反映 */
         
-        width: unset;    /* 幅 */
-        height: unset;   /* 高さ */
+        width: 200px;    /* 幅 */
+        height: 30px;   /* 高さ */
         bottom: 16px;         /* 下からの配置位置(距離)を指定(表示領域の最下端から) */
         right: 16px;          /* 右からの配置位置(距離)を指定(表示領域の再右端から) */
         border-radius: 8px;   /* border-radius:ボックスの4つのコーナーの角丸をまとめて指定 */
